fix:changed background for dark mode

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* lightmode style.................................................................... */
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 #container {
   width: 100%;
   height: 100vh;
@@ -166,7 +170,7 @@ select option {
 
 /* darkmode style ................................................... */
 #container.dark-mode {
-  background-color: black;
+  background-color: rgb(39, 39, 39);
 }
 #wrapper.dark-mode {
   width: 50%;
